--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,7 @@
 
 a {
     text-decoration: none;
+    color: inherit;
 }
 
 body {
@@ -27,7 +28,7 @@ body {
 }
 
 a.title {
-    font-family:'vg5000';
+    font-family:'Pixelify Sans';
     font-size: 4rem;
     color: palevioletred;
     width: 40rem;
@@ -42,6 +43,7 @@ a.title {
 
 a.navlink {
     font-family: "Roboto";
+    font-weight: 300;
     font-size: 2.25rem;
     color: rgb(216, 112, 147);
     transition-duration: 0.5s;
@@ -57,6 +59,22 @@ a.navlink:hover {
     background-color: palevioletred;
     width:100%;
     height:50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+p.wip {
+    color: white;
+    font-family: "roboto";
+    font-weight: 300;
+    font-size: 4rem;
+    width:max(50%,500px);
+}
+
+a.wip-link {
+    font-style:italic;
+    text-decoration: underline;
 }
 
 .footer-wrapper {
@@ -69,6 +87,7 @@ a.navlink:hover {
     background-color: #333;
     color:white;
     font-family: "roboto";
+    font-weight:300;
     font-size: 0.75rem;
     align-self: last baseline;
     padding: 7.5px;
