--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -1,85 +1,1 @@
-* {
-    padding: 0;
-    margin: 0;
-}
-
-a {
-    text-decoration: none;
-}
-
-body {
-    background-color:white;
-}
-
-.main-wrapper {
-    color: palevioletred;
-    display: flex;
-    flex-direction: column;
-}
-
-.header-wrapper {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: 1rem;
-    height: 25vh;
-    justify-content: center;
-}
-
-a.title {
-    font-family:'vg5000';
-    font-size: 4rem;
-    color: palevioletred;
-    width: 40rem;
-    text-align: center;
-}
-
-.navlink-wrapper {
-    display: flex;
-    flex-direction: row;
-    gap: 2rem;
-}
-
-a.navlink {
-    font-family: "Roboto";
-    font-size: 2.25rem;
-    color: rgb(216, 112, 147);
-    transition-duration: 0.5s;
-}
-
-a.navlink:hover {
-    color:transparent;
-    text-shadow: 0 0 3px rgba(216,112,147,1);
-    transition-duration: 0.5s;
-}
-
-.content-wrapper {
-    background-color: palevioletred;
-    width:100%;
-    height:50vh;
-}
-
-.footer-wrapper {
-    height: 25vh;
-    background-color:palevioletred;
-    display:flex;
-}
-
-.credit-wrapper {
-    background-color: #333;
-    color:white;
-    font-family: "roboto";
-    font-size: 0.75rem;
-    align-self: last baseline;
-    padding: 7.5px;
-    display: flex;
-    flex-direction:row;
-    gap:1rem;
-    width: 100%;
-    justify-content: center;
-}
-
-a.credit-link {
-    color:white;
-    font-style: italic;
-}
+not used currently
