couple small metadata updates

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/static/css/style.css">
-    <title>{% block title %}PSTSO{% endblock %}</title>
+    <title>{% block title %}SciTech SO{% endblock %}</title>
+    <meta name="description" content="The website of the Pittsburgh Sci Tech Science Olympiad team.">
 
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
